[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/Font/upheavtt.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/ShopManger.gd" type="Script" id=2]
[ext_resource path="res://Scripts/EquipWeapon.gd" type="Script" id=3]
[ext_resource path="res://Assets/big iron.png" type="Texture" id=4]
[ext_resource path="res://Scripts/BuyButton.gd" type="Script" id=5]
[ext_resource path="res://Assets/boomstick.png" type="Texture" id=6]
[ext_resource path="res://Assets/pisto.png" type="Texture" id=7]
[ext_resource path="res://Assets/snipey.png" type="Texture" id=8]
[ext_resource path="res://Assets/Font/use_this.tres" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 3
outline_color = Color( 0.172549, 0.0666667, 0.105882, 1 )
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0.976471, 0.894118, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.776471, 0.745098, 0.678431, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 1
outline_color = Color( 1, 0.235294, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=4]
size = 25
outline_size = 1
outline_color = Color( 1, 0.235294, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]
size = 18
outline_size = 1
outline_color = Color( 1, 0.235294, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=7]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.960784, 0.478431, 0.129412, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.960784, 0.223529, 0.172549, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0.635294, 0.215686, 0.188235, 1 )
shadow_size = 1
shadow_offset = Vector2( 0, 2 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.54902, 0.54902, 0.54902, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.239216, 0.239216, 0.239216, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0.12549, 0.12549, 0.12549, 1 )
shadow_size = 1
shadow_offset = Vector2( 0, 3 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.984314, 0.619608, 0.188235, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.988235, 0.364706, 0.321569, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0.635294, 0.215686, 0.188235, 1 )
shadow_size = 1
shadow_offset = Vector2( 0, 2 )

[sub_resource type="DynamicFont" id=2]
size = 100
outline_size = 3
outline_color = Color( 0.172549, 0.0666667, 0.105882, 1 )
extra_spacing_top = -10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 60
outline_size = 1
outline_color = Color( 0.733333, 0.913725, 0.160784, 1 )
extra_spacing_space = -6
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 42
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 9 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.223529, 0.0901961, 0.0313726, 1 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_right = 1.0
margin_bottom = 101.0
color = Color( 0.270588, 0.105882, 0.0352941, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -120.0
margin_right = 120.0
margin_bottom = 90.0
custom_colors/font_color = Color( 0.780392, 0.27451, 0.27451, 1 )
custom_colors/font_color_shadow = Color( 0.486275, 0.164706, 0.164706, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 1 )
text = "SHOP"

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="ItemContainer" type="HBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -155.0
margin_top = -211.0
margin_right = 1045.0
margin_bottom = 219.0
custom_constants/separation = 600

[node name="Pistol" type="Control" parent="Control/ItemContainer"]
margin_right = 300.0
margin_bottom = 430.0
rect_min_size = Vector2( 300, 400 )

[node name="Panel" type="Panel" parent="Control/ItemContainer/Pistol"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0
custom_styles/panel = SubResource( 6 )

[node name="TextureRect2" type="TextureRect" parent="Control/ItemContainer/Pistol/Panel"]
modulate = Color( 0, 0, 0, 0.407843 )
margin_left = -4.21606
margin_top = 57.8368
margin_right = 361.784
margin_bottom = 226.837
rect_rotation = -35.6
rect_pivot_offset = Vector2( 166, 76 )
texture = ExtResource( 7 )
expand = true

[node name="TextureRect" type="TextureRect" parent="Control/ItemContainer/Pistol/Panel"]
margin_left = -7.0
margin_top = 54.0
margin_right = 359.0
margin_bottom = 223.0
rect_rotation = -35.6
rect_pivot_offset = Vector2( 166, 76 )
texture = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="Control/ItemContainer/Pistol"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -202.0
margin_right = 156.0
margin_bottom = -156.0
custom_colors/font_color = Color( 0.960784, 0.74902, 0.184314, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.682353, 0.301961, 0.0941176, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 3 )
text = "PISTOL"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Control/ItemContainer/Pistol"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = 153.0
margin_right = 150.0
margin_bottom = 212.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.498039, 0.498039, 0.498039, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 4 )
text = "40 dmg, 10% crit,
0.65 firerate"
align = 1
autowrap = true

[node name="Label3" type="Label" parent="Control/ItemContainer/Pistol"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = 202.0
margin_right = 150.0
margin_bottom = 239.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.498039, 0.498039, 0.498039, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 5 )
text = "Ordinary gun
shoots ordinary bullets"
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/ItemContainer/Pistol"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = 242.0
margin_right = 149.0
margin_bottom = 281.0

[node name="Buy" type="Button" parent="Control/ItemContainer/Pistol/HBoxContainer"]
margin_right = 148.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 0.752941, 0.752941, 0.752941, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 8 )
enabled_focus_mode = 0
text = "BUY"
script = ExtResource( 5 )
weapon_name = "Pistol"
weapon_cost = 1

[node name="Equip2" type="Button" parent="Control/ItemContainer/Pistol/HBoxContainer"]
margin_left = 152.0
margin_right = 300.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 0.752941, 0.752941, 0.752941, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 8 )
disabled = true
enabled_focus_mode = 0
text = "NOT BOUGHT"
script = ExtResource( 3 )
weapon_name = "Pistol"

[node name="Revolver" type="Control" parent="Control/ItemContainer"]
margin_left = 900.0
margin_right = 1200.0
margin_bottom = 430.0
rect_min_size = Vector2( 300, 400 )

[node name="Panel" type="Panel" parent="Control/ItemContainer/Revolver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0
custom_styles/panel = SubResource( 6 )

[node name="TextureRect2" type="TextureRect" parent="Control/ItemContainer/Revolver/Panel"]
modulate = Color( 0, 0, 0, 0.407843 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.724
margin_top = -89.7542
margin_right = 301.276
margin_bottom = 121.246
rect_rotation = -26.7
rect_pivot_offset = Vector2( 124, 80 )
texture = ExtResource( 4 )
expand = true

[node name="TextureRect" type="TextureRect" parent="Control/ItemContainer/Revolver/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -183.0
margin_top = -93.0
margin_right = 299.0
margin_bottom = 118.0
rect_rotation = -26.7
rect_pivot_offset = Vector2( 124, 80 )
texture = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="Control/ItemContainer/Revolver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -202.0
margin_right = 156.0
margin_bottom = -156.0
custom_colors/font_color = Color( 0.960784, 0.74902, 0.184314, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.682353, 0.301961, 0.0941176, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 3 )
text = "REVOLVER"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Control/ItemContainer/Revolver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = 153.0
margin_right = 150.0
margin_bottom = 212.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.498039, 0.498039, 0.498039, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 4 )
text = "80 dmg, 20% crit,
1.15 firerate"
align = 1
autowrap = true

[node name="Label3" type="Label" parent="Control/ItemContainer/Revolver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = 202.0
margin_right = 150.0
margin_bottom = 239.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.498039, 0.498039, 0.498039, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 5 )
text = "Big iron on his hip...
Every cowboy must have this"
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/ItemContainer/Revolver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = 242.0
margin_right = 149.0
margin_bottom = 281.0

[node name="Buy" type="Button" parent="Control/ItemContainer/Revolver/HBoxContainer"]
margin_right = 148.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 0.752941, 0.752941, 0.752941, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 8 )
enabled_focus_mode = 0
text = "BUY"
script = ExtResource( 5 )
weapon_name = "Revolver"
weapon_cost = 1

[node name="Equip2" type="Button" parent="Control/ItemContainer/Revolver/HBoxContainer"]
margin_left = 152.0
margin_right = 300.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 0.752941, 0.752941, 0.752941, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 8 )
disabled = true
enabled_focus_mode = 0
text = "NOT BOUGHT"
script = ExtResource( 3 )
weapon_name = "Revolver"

[node name="Shotgun" type="Control" parent="Control/ItemContainer"]
margin_left = 1800.0
margin_right = 2100.0
margin_bottom = 430.0
rect_min_size = Vector2( 300, 400 )

[node name="Panel" type="Panel" parent="Control/ItemContainer/Shotgun"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0
custom_styles/panel = SubResource( 6 )

[node name="TextureRect2" type="TextureRect" parent="Control/ItemContainer/Shotgun/Panel"]
modulate = Color( 0, 0, 0, 0.407843 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.762
margin_top = -65.7779
margin_right = 203.238
margin_bottom = 96.2221
rect_rotation = -26.7
rect_pivot_offset = Vector2( 150, 64 )
texture = ExtResource( 6 )
expand = true

[node name="TextureRect" type="TextureRect" parent="Control/ItemContainer/Shotgun/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -179.0
margin_top = -69.0
margin_right = 201.0
margin_bottom = 93.0
rect_rotation = -26.7
rect_pivot_offset = Vector2( 150, 64 )
texture = ExtResource( 6 )
expand = true

[node name="Label" type="Label" parent="Control/ItemContainer/Shotgun"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.0
margin_top = -202.0
margin_right = 151.0
margin_bottom = -156.0
custom_colors/font_color = Color( 0.960784, 0.74902, 0.184314, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.682353, 0.301961, 0.0941176, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 3 )
text = "SHOTGUN"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Control/ItemContainer/Shotgun"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = 153.0
margin_right = 150.0
margin_bottom = 202.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.498039, 0.498039, 0.498039, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 4 )
text = "25 dmg, 5% crit,
1.65 firerate"
align = 1
autowrap = true

[node name="Label3" type="Label" parent="Control/ItemContainer/Shotgun"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = 202.0
margin_right = 150.0
margin_bottom = 239.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.498039, 0.498039, 0.498039, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 5 )
text = "SHOOTS OUT 4-7 bullets
(YOU CAN't UPGRADE THAT)"
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/ItemContainer/Shotgun"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = 242.0
margin_right = 149.0
margin_bottom = 281.0

[node name="Buy" type="Button" parent="Control/ItemContainer/Shotgun/HBoxContainer"]
margin_right = 148.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 0.752941, 0.752941, 0.752941, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 8 )
enabled_focus_mode = 0
text = "BUY"
script = ExtResource( 5 )
weapon_name = "Shotgun"
weapon_cost = 1

[node name="Equip2" type="Button" parent="Control/ItemContainer/Shotgun/HBoxContainer"]
margin_left = 152.0
margin_right = 300.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 0.752941, 0.752941, 0.752941, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 8 )
disabled = true
enabled_focus_mode = 0
text = "NOT BOUGHT"
script = ExtResource( 3 )
weapon_name = "Shotgun"

[node name="Sniper" type="Control" parent="Control/ItemContainer"]
margin_left = 2700.0
margin_right = 3000.0
margin_bottom = 430.0
rect_min_size = Vector2( 300, 400 )

[node name="Panel" type="Panel" parent="Control/ItemContainer/Sniper"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0
custom_styles/panel = SubResource( 6 )

[node name="TextureRect" type="TextureRect" parent="Control/ItemContainer/Sniper/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -215.0
margin_top = -120.0
margin_right = 233.0
margin_bottom = 43.0
rect_rotation = -33.7
rect_pivot_offset = Vector2( 261, 95 )
texture = ExtResource( 8 )
expand = true

[node name="Label" type="Label" parent="Control/ItemContainer/Sniper"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -172.0
margin_top = -202.0
margin_right = 172.0
margin_bottom = -156.0
custom_colors/font_color = Color( 0.960784, 0.74902, 0.184314, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0.682353, 0.301961, 0.0941176, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 3 )
text = "SNIPER RIFLE"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Control/ItemContainer/Sniper"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = 153.0
margin_right = 150.0
margin_bottom = 202.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.498039, 0.498039, 0.498039, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 4 )
text = "150 dmg, 33% crit,
2.75 firerate"
align = 1
autowrap = true

[node name="Label3" type="Label" parent="Control/ItemContainer/Sniper"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = 202.0
margin_right = 150.0
margin_bottom = 239.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.498039, 0.498039, 0.498039, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 5 )
text = "BULLETS GO THROUGH 3 ENEMIES
\"sniping's a good job mate\""
align = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/ItemContainer/Sniper"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.0
margin_top = 242.0
margin_right = 149.0
margin_bottom = 281.0

[node name="Buy" type="Button" parent="Control/ItemContainer/Sniper/HBoxContainer"]
margin_right = 148.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 0.752941, 0.752941, 0.752941, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 8 )
enabled_focus_mode = 0
text = "BUY"
script = ExtResource( 5 )
weapon_name = "Sniper"
weapon_cost = 1

[node name="Equip2" type="Button" parent="Control/ItemContainer/Sniper/HBoxContainer"]
margin_left = 152.0
margin_right = 300.0
margin_bottom = 39.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 0.752941, 0.752941, 0.752941, 1 )
custom_fonts/font = SubResource( 7 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 8 )
disabled = true
enabled_focus_mode = 0
text = "NOT BOUGHT"
script = ExtResource( 3 )
weapon_name = "Sniper"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -367.0
margin_top = -43.0
margin_right = 367.0
margin_bottom = 43.0
custom_constants/separation = 500

[node name="PreviousButton" type="Button" parent="HBoxContainer"]
margin_right = 117.0
margin_bottom = 86.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.490196, 0.490196, 0.490196, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.980392, 0.776471, 0.458824, 1 )
custom_colors/font_color_pressed = Color( 0.964706, 0.713726, 0.32549, 1 )
custom_fonts/font = SubResource( 2 )
text = "<-"
flat = true

[node name="NextButton" type="Button" parent="HBoxContainer"]
margin_left = 617.0
margin_right = 734.0
margin_bottom = 86.0
focus_mode = 0
custom_colors/font_color_disabled = Color( 0.490196, 0.490196, 0.490196, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.980392, 0.776471, 0.458824, 1 )
custom_colors/font_color_pressed = Color( 0.964706, 0.713726, 0.32549, 1 )
custom_fonts/font = SubResource( 2 )
text = "->"
flat = true

[node name="AmountOmoney" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -241.0
margin_top = -64.0
margin_right = -10.0
margin_bottom = -10.0
custom_colors/font_color = Color( 0.427451, 0.956863, 0.0666667, 1 )
custom_colors/font_outline_modulate = Color( 0.027451, 0.290196, 0.0117647, 1 )
custom_colors/font_color_shadow = Color( 0.0980392, 0.560784, 0.0117647, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 12 )
text = "00000 $"
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="AmountOmoney"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 13.0
margin_bottom = -6.0
rect_pivot_offset = Vector2( 115, 17 )

[node name="MainMenu" type="Button" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 142.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
text = "BACK"

[connection signal="mouse_entered" from="Control/ItemContainer/Pistol/HBoxContainer/Buy" to="Control/ItemContainer/Pistol/HBoxContainer/Buy" method="_on_Buy_mouse_entered"]
[connection signal="mouse_exited" from="Control/ItemContainer/Pistol/HBoxContainer/Buy" to="Control/ItemContainer/Pistol/HBoxContainer/Buy" method="_on_Buy_mouse_exited"]
[connection signal="pressed" from="Control/ItemContainer/Pistol/HBoxContainer/Buy" to="Control/ItemContainer/Pistol/HBoxContainer/Buy" method="_on_Bought"]
[connection signal="pressed" from="Control/ItemContainer/Pistol/HBoxContainer/Equip2" to="Control/ItemContainer/Pistol/HBoxContainer/Equip2" method="_on_Equip_pressed"]
[connection signal="mouse_entered" from="Control/ItemContainer/Revolver/HBoxContainer/Buy" to="Control/ItemContainer/Revolver/HBoxContainer/Buy" method="_on_Buy_mouse_entered"]
[connection signal="mouse_exited" from="Control/ItemContainer/Revolver/HBoxContainer/Buy" to="Control/ItemContainer/Revolver/HBoxContainer/Buy" method="_on_Buy_mouse_exited"]
[connection signal="pressed" from="Control/ItemContainer/Revolver/HBoxContainer/Buy" to="Control/ItemContainer/Revolver/HBoxContainer/Buy" method="_on_Bought"]
[connection signal="pressed" from="Control/ItemContainer/Revolver/HBoxContainer/Equip2" to="Control/ItemContainer/Revolver/HBoxContainer/Equip2" method="_on_Equip_pressed"]
[connection signal="mouse_entered" from="Control/ItemContainer/Shotgun/HBoxContainer/Buy" to="Control/ItemContainer/Shotgun/HBoxContainer/Buy" method="_on_Buy_mouse_entered"]
[connection signal="mouse_exited" from="Control/ItemContainer/Shotgun/HBoxContainer/Buy" to="Control/ItemContainer/Shotgun/HBoxContainer/Buy" method="_on_Buy_mouse_exited"]
[connection signal="pressed" from="Control/ItemContainer/Shotgun/HBoxContainer/Buy" to="Control/ItemContainer/Shotgun/HBoxContainer/Buy" method="_on_Bought"]
[connection signal="pressed" from="Control/ItemContainer/Shotgun/HBoxContainer/Equip2" to="Control/ItemContainer/Shotgun/HBoxContainer/Equip2" method="_on_Equip_pressed"]
[connection signal="mouse_entered" from="Control/ItemContainer/Sniper/HBoxContainer/Buy" to="Control/ItemContainer/Sniper/HBoxContainer/Buy" method="_on_Buy_mouse_entered"]
[connection signal="mouse_exited" from="Control/ItemContainer/Sniper/HBoxContainer/Buy" to="Control/ItemContainer/Sniper/HBoxContainer/Buy" method="_on_Buy_mouse_exited"]
[connection signal="pressed" from="Control/ItemContainer/Sniper/HBoxContainer/Buy" to="Control/ItemContainer/Sniper/HBoxContainer/Buy" method="_on_Bought"]
[connection signal="pressed" from="Control/ItemContainer/Sniper/HBoxContainer/Equip2" to="Control/ItemContainer/Sniper/HBoxContainer/Equip2" method="_on_Equip_pressed"]
[connection signal="pressed" from="HBoxContainer/PreviousButton" to="." method="_on_PreviousButton_pressed"]
[connection signal="pressed" from="HBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]
